--- a/packages/modules/react-query/package.json
+++ b/packages/modules/react-query/package.json
@@ -19,7 +19,7 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@tanstack/react-query": ">=4.0.0 <6.0.0",
+    "@tanstack/react-query": ">=4.0.0 <=5.72.1",
     "@tinkoff/errors": "0.0.0-stub",
     "@tramvai/safe-strings": "0.0.0-stub",
     "@tramvai/tokens-child-app": "0.0.0-stub",
