--- a/packages/tokens/react-query/package.json
+++ b/packages/tokens/react-query/package.json
@@ -18,7 +18,7 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@tanstack/react-query": ">=4.0.0 <6.0.0"
+    "@tanstack/react-query": ">=4.0.0 <=5.72.1"
   },
   "devDependencies": {
     "@tanstack/react-query": "^5.72.1"
