--- a/packages/tramvai/storybook-addon/package.json
+++ b/packages/tramvai/storybook-addon/package.json
@@ -20,7 +20,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@tanstack/react-query": ">=4.0.0 <6.0.0",
+    "@tanstack/react-query": ">=4.0.0 <=5.72.1",
     "@tinkoff/is-modern-lib": "0.0.0-stub",
     "@tramvai/test-mocks": "0.0.0-stub",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
