--- a/packages/modules/react-query/package.json
+++ b/packages/modules/react-query/package.json
@@ -28,7 +28,7 @@
     "@tramvai/tokens-render": "0.0.0-stub"
   },
   "devDependencies": {
-    "@tanstack/react-query": "^5.72.1"
+    "@tanstack/react-query": "5.72.1"
   },
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
