--- a/packages/tramvai/storybook-addon/package.json
+++ b/packages/tramvai/storybook-addon/package.json
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@tanstack/react-query": "^5.72.1",
+    "@tanstack/react-query": "5.72.1",
     "@types/webpack": ">=5.28",
     "webpack": "5.87.0"
   },
