--- a/packages/plugin-webpack-builder/package.json
+++ b/packages/plugin-webpack-builder/package.json
@@ -5,6 +5,8 @@
   "types": "./lib/index.d.ts",
   "dependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
+    "@tinkoff/utils": "^2.1.3",
+    "browserslist": "^4.21.3",
     "express": "^4.18.1",
     "http-proxy": "^1.18.1",
     "mini-css-extract-plugin": "2.7.6",
