--- a/packages/tokens/react-query/package.json
+++ b/packages/tokens/react-query/package.json
@@ -21,7 +21,7 @@
     "@tanstack/react-query": ">=4.0.0 <6.0.0"
   },
   "devDependencies": {
-    "@tanstack/react-query": "^5.72.1"
+    "@tanstack/react-query": "5.72.1"
   },
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
