--- a/packages/libs/eslint-plugin-tramvai/package.json
+++ b/packages/libs/eslint-plugin-tramvai/package.json
@@ -24,7 +24,8 @@
     "@tinkoff/utils": "^2.1.2",
     "dependency-cruiser": "^16.10.3",
     "eslint-plugin-compat": "^6.0.2",
-    "eslint-plugin-es-x": "^8.7.0"
+    "eslint-plugin-es-x": "^8.7.0",
+    "find-cache-dir": "^3.2.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.26.8",
@@ -34,7 +35,6 @@
     "@typescript-eslint/parser": "^8.24.1",
     "browserslist": "^4.0.0",
     "eslint": "^8.38.0",
-    "find-cache-dir": "^3.2.1",
     "typescript": "~5.1.0"
   },
   "peerDependencies": {
