--- a/packages/plugin-webpack-builder/package.json
+++ b/packages/plugin-webpack-builder/package.json
@@ -6,8 +6,12 @@
   "dependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
     "@tinkoff/utils": "^2.1.3",
+    "ansi-escapes": "^4.3.2",
+    "ansis": "^3.17.0",
     "browserslist": "^4.21.3",
+    "chalk": "^4.1.2",
     "express": "^4.18.1",
+    "figures": "^3.2.0",
     "http-proxy": "^1.18.1",
     "mini-css-extract-plugin": "2.7.6",
     "postcss-modules-values-replace": "^4.0.0",
@@ -16,7 +20,7 @@
     "webpack-dev-middleware": "^6.1.1",
     "webpack-stats-plugin": "^1.1.3",
     "webpack-virtual-modules": "^0.6.2",
-    "webpackbar": "^5.0.2"
+    "wrap-ansi": "^7.0.0"
   },
   "devDependencies": {
     "@tramvai/api": "0.0.0-stub",
