--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -49,6 +49,9 @@
         },
         {
             "path": "../api"
+        },
+        {
+            "path": "../plugin-webpack-builder"
         }
     ]
 }
