--- a/packages/plugin-webpack-builder/package.json
+++ b/packages/plugin-webpack-builder/package.json
@@ -10,11 +10,13 @@
     "ansis": "^3.17.0",
     "browserslist": "^4.21.3",
     "chalk": "^4.1.2",
+    "core-js-compat": "3.43.0",
     "express": "^4.18.1",
     "figures": "^3.2.0",
     "http-proxy": "^1.18.1",
     "mini-css-extract-plugin": "2.7.6",
     "postcss-modules-values-replace": "^4.0.0",
+    "semver": "^7.3.2",
     "thread-loader": "^3.0.4",
     "webpack": "5.87.0",
     "webpack-dev-middleware": "^6.1.1",
