--- a/packages/plugin-webpack-builder/package.json
+++ b/packages/plugin-webpack-builder/package.json
@@ -4,8 +4,10 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@tinkoff/dippy": "0.0.0-stub",
     "@tinkoff/utils": "^2.1.3",
+    "@tinkoff/webpack-dedupe-plugin": "0.0.0-stub",
     "ansi-escapes": "^4.3.2",
     "ansis": "^3.17.0",
     "browserslist": "^4.21.3",
@@ -16,7 +18,11 @@
     "http-proxy": "^1.18.1",
     "mini-css-extract-plugin": "2.7.6",
     "postcss-modules-values-replace": "^4.0.0",
+    "resolve": "^1.22.4",
     "semver": "^7.3.2",
+    "spark-md5": "^3.0.2",
+    "svgo": "^3.0.2",
+    "svgo-loader": "^4.0.0",
     "thread-loader": "^3.0.4",
     "webpack": "5.87.0",
     "webpack-dev-middleware": "^6.1.1",
@@ -28,6 +34,8 @@
     "@tramvai/api": "0.0.0-stub",
     "@types/express": "^4.17.13",
     "@types/http-proxy": "^1.17.9",
+    "@types/resolve": "^1.20.2",
+    "@types/spark-md5": "^3.0.5",
     "@types/thread-loader": "^4.0.0",
     "@types/webpack-dev-middleware": "^5.0.2",
     "@types/webpack-stats-plugin": "^0.3.2"
