--- a/packages/plugin-webpack-builder/tsconfig.json
+++ b/packages/plugin-webpack-builder/tsconfig.json
@@ -22,6 +22,9 @@
         },
         {
             "path": "../api"
+        },
+        {
+            "path": "../libs/webpack-dedupe-plugin"
         }
     ]
 }
