--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -52,6 +52,9 @@
         },
         {
             "path": "../plugin-webpack-builder"
+        },
+        {
+            "path": "../plugin-swc-transpiler"
         }
     ]
 }
