--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -74,6 +74,7 @@
     "@tramvai/api": "0.0.0-stub",
     "@tramvai/build": "0.0.0-stub",
     "@tramvai/plugin-babel-transpiler": "0.0.0-stub",
+    "@tramvai/plugin-swc-transpiler": "0.0.0-stub",
     "@tramvai/plugin-webpack-builder": "0.0.0-stub",
     "@tramvai/react": "0.0.0-stub",
     "@tramvai/tools-check-versions": "0.0.0-stub",
