--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "resolutions": {
     "webpack": "^5",
-    "@types/webpack": "^5",
+    "@types/webpack": "5.28.1",
     "@types/mime": "3.0.4",
     "@types/react": "^18.0.0",
     "@types/express-serve-static-core": "^4.17.18"
