--- a/examples/cli-rewrited/package.json
+++ b/examples/cli-rewrited/package.json
@@ -17,6 +17,7 @@
     "@tramvai/cli": "0.0.0-stub",
     "@tramvai/plugin-babel-transpiler": "0.0.0-stub",
     "@tramvai/plugin-webpack-builder": "0.0.0-stub",
+    "@tramvai/plugin-webpack-pwa": "0.0.0-stub",
     "@tramvai/test-integration": "0.0.0-stub",
     "@tramvai/test-integration-jest": "0.0.0-stub",
     "@types/jest": "^29.5.0",
@@ -32,6 +33,7 @@
     "@tramvai/core": "0.0.0-stub",
     "@tramvai/module-common": "0.0.0-stub",
     "@tramvai/module-error-interceptor": "0.0.0-stub",
+    "@tramvai/module-progressive-web-app": "0.0.0-stub",
     "@tramvai/module-render": "0.0.0-stub",
     "@tramvai/module-router": "0.0.0-stub",
     "@tramvai/module-seo": "0.0.0-stub",
