--- a/packages/modules/pwa/tsconfig.json
+++ b/packages/modules/pwa/tsconfig.json
@@ -26,6 +26,9 @@
         },
         {
             "path": "../../tokens/common"
+        },
+        {
+            "path": "../../plugin-webpack-pwa"
         }
     ]
 }
