--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@tinkoff/webpack-dedupe-plugin": "0.0.0-stub",
+    "@tramvai/papi": "0.0.0-stub",
     "@types/detect-port": "^1.3.5",
     "@types/find-cache-dir": "^3.2.1",
     "@types/fs-extra": "^9.0.13",
