--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -21,6 +21,9 @@
         },
         {
             "path": "../libs/webpack-dedupe-plugin"
+        },
+        {
+            "path": "../tramvai/papi"
         }
     ]
 }
