--- a/packages/plugin-webpack-builder/package.json
+++ b/packages/plugin-webpack-builder/package.json
@@ -4,6 +4,7 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "dependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@svgr/webpack": "^8.1.0",
     "@tinkoff/browserslist-config": "0.0.0-stub",
     "@tinkoff/dippy": "0.0.0-stub",
@@ -27,6 +28,7 @@
     "thread-loader": "^3.0.4",
     "webpack": "5.87.0",
     "webpack-dev-middleware": "^6.1.1",
+    "webpack-hot-middleware": "^2.26.1",
     "webpack-stats-plugin": "^1.1.3",
     "webpack-virtual-modules": "^0.6.2",
     "wrap-ansi": "^7.0.0"
@@ -39,6 +41,7 @@
     "@types/spark-md5": "^3.0.5",
     "@types/thread-loader": "^4.0.0",
     "@types/webpack-dev-middleware": "^5.0.2",
+    "@types/webpack-hot-middleware": "^2.25.9",
     "@types/webpack-stats-plugin": "^0.3.2"
   },
   "peerDependencies": {
