--- a/packages/plugin-webpack-builder/package.json
+++ b/packages/plugin-webpack-builder/package.json
@@ -17,14 +17,18 @@
     "core-js-compat": "3.43.0",
     "express": "^4.18.1",
     "figures": "^3.2.0",
+    "file-loader": "^6.2.0",
     "http-proxy": "^1.18.1",
+    "image-minimizer-webpack-plugin": "^4.1.3",
+    "image-size": "^1.0.2",
+    "loader-utils": "^3.2.1",
     "mini-css-extract-plugin": "2.7.6",
     "postcss-modules-values-replace": "^4.0.0",
     "resolve": "^1.22.4",
     "semver": "^7.3.2",
+    "sharp": "0.34.3",
     "spark-md5": "^3.0.2",
     "svgo": "^3.0.2",
-    "svgo-loader": "^4.0.0",
     "thread-loader": "^3.0.4",
     "webpack": "5.87.0",
     "webpack-dev-middleware": "^6.1.1",
