--- a/packages/tramvai/papi/tsconfig.json
+++ b/packages/tramvai/papi/tsconfig.json
@@ -12,6 +12,9 @@
     "references": [
         {
             "path": "../../libs/url"
+        },
+        {
+            "path": "../../tokens/common"
         }
     ]
 }
