--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,6 +5,7 @@
   "types": "./lib/index.d.ts",
   "dependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
+    "@tinkoff/package-manager-wrapper": "0.0.0-stub",
     "@tinkoff/utils": "^2.1.3",
     "chalk": "^4.1.2",
     "chrome-trace-event": "^1.0.4",
