--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -24,6 +24,9 @@
         },
         {
             "path": "../tramvai/papi"
+        },
+        {
+            "path": "../libs/package-manager-wrapper"
         }
     ]
 }
