--- a/packages/plugin-webpack-builder/package.json
+++ b/packages/plugin-webpack-builder/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-middleware": "^7.4.2",
     "webpack-hot-middleware": "^2.26.1",
     "webpack-stats-plugin": "^1.1.3",
+    "webpack-subresource-integrity": "^5.2.0-rc.1",
     "webpack-virtual-modules": "^0.6.2",
     "wrap-ansi": "^7.0.0"
   },
