--- a/packages/modules/opentelemetry/tsconfig.json
+++ b/packages/modules/opentelemetry/tsconfig.json
@@ -38,6 +38,9 @@
         },
         {
             "path": "../../tokens/render"
+        },
+        {
+            "path": "../../tokens/child-app"
         }
     ]
 }
