--- a/packages/libs/measure-express-requests/package.json
+++ b/packages/libs/measure-express-requests/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@tinkoff/utils": "^2.1.3",
     "on-finished": "^2.3.0",
-    "path-to-regexp": "0.1.7",
+    "path-to-regexp": "^0.1.12",
     "tslib": "^2.4.0"
   },
   "peerDependencies": {
