--- a/packages/modules/opentelemetry/package.json
+++ b/packages/modules/opentelemetry/package.json
@@ -36,7 +36,7 @@
     "@tramvai/tokens-router": "0.0.0-stub",
     "@tramvai/tokens-server": "0.0.0-stub",
     "@tramvai/tokens-server-private": "0.0.0-stub",
-    "path-to-regexp": "0.1.7"
+    "path-to-regexp": "^0.1.12"
   },
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
