--- a/.github/workflows/test-smoke.yml
+++ b/.github/workflows/test-smoke.yml
@@ -18,37 +18,51 @@ jobs:
 
     steps:
       - name: Setup Git
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
+
+      - name: Setup Corepack
+        run: corepack enable
+
+      - name: Setup yarn
+        run: |
+          yarn config set nodeLinker node-modules
+          yarn config set enableImmutableInstalls false
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
       - name: Build
         run: yarn build
 
+      - name: Setup tramvai
+        run: npm i -g @tramvai/cli@prerelease
+
+      - name: Setup tramvai debug
+        run: tramvai-debug debugPath="$PWD/packages/cli"
+
       - name: Bootstrap application
-        run: ./node_modules/.bin/tramvai new smoke-bootstrap --type=app --template=multirepo --packageManager=npm --testingFramework=jest
+        working-directory: ../
+        run: tramvai-debug new smoke-bootstrap --type=app --template=multirepo --packageManager=npm --testingFramework=jest
 
       - name: Install Playwright
-        working-directory: smoke-bootstrap
-        run: yarn playwright install --with-deps
+        working-directory: ../smoke-bootstrap
+        run: yarn playwright install
 
       - name: Build application
-        working-directory: smoke-bootstrap
+        working-directory: ../smoke-bootstrap
         run: yarn build
 
       - name: Test:unit application
-        working-directory: smoke-bootstrap
+        working-directory: ../smoke-bootstrap
         run: yarn test
 
       - name: Test:integration application
-        working-directory: smoke-bootstrap
+        working-directory: ../smoke-bootstrap
         run: yarn test:integration
