--- a/examples/how-to/package.json
+++ b/examples/how-to/package.json
@@ -18,8 +18,8 @@
     "@tramvai/react": "0.0.0-stub",
     "@tramvai/react-query": "0.0.0-stub",
     "@tramvai/state": "0.0.0-stub",
-    "@tramvai/tokens-router": "0.0.0-stub",
-    "@tramvai/tokens-common": "0.0.0-stub"
+    "@tramvai/tokens-common": "0.0.0-stub",
+    "@tramvai/tokens-router": "0.0.0-stub"
   },
   "scripts": {
     "tramvai": "cross-env MOCKER_ENABLED=true tramvai"
@@ -28,10 +28,10 @@
     "@types/react": "^18.0.0"
   },
   "peerDependencies": {
-    "react": ">=16.14.0",
-    "react-dom": ">=16.14.0",
     "@tramvai/module-dev-tools": "0.0.0-stub",
-    "@tramvai/module-react-query-devtools": "0.0.0-stub"
+    "@tramvai/module-react-query-devtools": "0.0.0-stub",
+    "react": ">=16.14.0",
+    "react-dom": ">=16.14.0"
   },
   "private": true,
   "license": "Apache-2.0"
