--- a/examples/render-to-stream/package.json
+++ b/examples/render-to-stream/package.json
@@ -13,29 +13,29 @@
     "test:integration:watch": "jest --runInBand --watch --config ./jest.integration.config.js"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/jest": "^29.5.0",
     "@tramvai/cli": "0.0.0-stub",
     "@tramvai/test-integration": "0.0.0-stub",
     "@tramvai/test-integration-jest": "0.0.0-stub",
-    "postcss-custom-media": "^8.0.0",
-    "postcss-modules-values-replace": "^4.0.0",
-    "postcss-custom-properties": "^11.0.0",
-    "postcss-nested": "^5.0.5",
+    "@types/jest": "^29.5.0",
+    "@types/react": "^18.0.0",
     "jest": "^29.5.0",
-    "jest-circus": "^29.5.0"
+    "jest-circus": "^29.5.0",
+    "postcss-custom-media": "^8.0.0",
+    "postcss-custom-properties": "^11.0.0",
+    "postcss-modules-values-replace": "^4.0.0",
+    "postcss-nested": "^5.0.5"
   },
   "dependencies": {
     "@tinkoff/router": "0.0.0-stub",
     "@tramvai/core": "0.0.0-stub",
-    "@tramvai/react": "0.0.0-stub",
-    "@tramvai/state": "0.0.0-stub",
     "@tramvai/module-common": "0.0.0-stub",
     "@tramvai/module-error-interceptor": "0.0.0-stub",
     "@tramvai/module-render": "0.0.0-stub",
     "@tramvai/module-router": "0.0.0-stub",
     "@tramvai/module-seo": "0.0.0-stub",
     "@tramvai/module-server": "0.0.0-stub",
+    "@tramvai/react": "0.0.0-stub",
+    "@tramvai/state": "0.0.0-stub",
     "@tramvai/tokens-common": "0.0.0-stub",
     "@tramvai/tokens-render": "0.0.0-stub",
     "@tramvai/tokens-router": "0.0.0-stub",
