--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
     "@types/mime": "3.0.4",
     "@types/react": "^18.0.0",
     "@types/express-serve-static-core": "^4.17.18"
-  }
+  },
+  "packageManager": "yarn@4.7.0+sha512.5a0afa1d4c1d844b3447ee3319633797bcd6385d9a44be07993ae52ff4facabccafb4af5dcd1c2f9a94ac113e5e9ff56f6130431905884414229e284e37bb7c9"
 }
