--- a/packages/libs/measure-fastify-requests/package.json
+++ b/packages/libs/measure-fastify-requests/package.json
@@ -19,14 +19,13 @@
   "dependencies": {
     "@tinkoff/utils": "^2.1.3",
     "fastify-plugin": "^4.2.1",
-    "path-to-regexp": "0.1.7",
+    "path-to-regexp": "^0.1.12",
     "tslib": "^2.4.0"
   },
   "peerDependencies": {
     "fastify": ">=3.0.0",
     "prom-client": "14.x"
   },
-  "devDependencies": {},
   "sideEffects": false,
   "license": "Apache-2.0"
 }
