--- a/packages/swc/.gitignore
+++ b/packages/swc/.gitignore
@@ -1,9 +1,16 @@
 # ignore anything but built release wasm files
 target/*
 !target/wasm32-wasi/
+!target/wasm32-wasip1/
 
 target/wasm32-wasi/*
 !target/wasm32-wasi/release
 
+target/wasm32-wasip1/*
+!target/wasm32-wasip1/release
+
 target/wasm32-wasi/release/*
 !target/wasm32-wasi/release/*.wasm
+
+target/wasm32-wasip1/release/*
+!target/wasm32-wasip1/release/*.wasm
