--- a/packages/swc/package.json
+++ b/packages/swc/package.json
@@ -10,6 +10,11 @@
     "type": "git",
     "url": "git+ssh://git@github.com/tramvaijs/tramvai.git"
   },
+  "scripts": {
+    "build:wasm": "./scripts/build-wasm.sh",
+    "docker:run": "./scripts/docker-run.sh",
+    "docker:build": "npm run docker:run ./scripts/build-wasm.sh"
+  },
   "dependencies": {
     "@swc/core": "1.3.100",
     "@swc/helpers": "0.5.1",
