--- a/packages/modules/opentelemetry/package.json
+++ b/packages/modules/opentelemetry/package.json
@@ -29,6 +29,7 @@
     "@opentelemetry/semantic-conventions": "^1.28.0",
     "@tinkoff/errors": "0.0.0-stub",
     "@tinkoff/utils": "^2.1.2",
+    "@tramvai/tokens-child-app": "0.0.0-stub",
     "@tramvai/tokens-common": "0.0.0-stub",
     "@tramvai/tokens-http-client": "0.0.0-stub",
     "@tramvai/tokens-metrics": "0.0.0-stub",
