--- a/packages/plugin-webpack-builder/package.json
+++ b/packages/plugin-webpack-builder/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "figures": "^3.2.0",
     "file-loader": "^6.2.0",
+    "find-cache-dir": "^3.3.2",
     "http-proxy": "^1.18.1",
     "image-minimizer-webpack-plugin": "^4.1.3",
     "image-size": "^1.0.2",
