--- a/packages/swc/package.json
+++ b/packages/swc/package.json
@@ -3,12 +3,17 @@
   "version": "0.0.0-stub",
   "description": "Tramvai integration with swc toolset",
   "files": [
-    "target/wasm32-wasi/release/*.wasm"
+    "target/wasm32-wasip1/release/*.wasm"
   ],
   "sideEffects": false,
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/tramvaijs/tramvai.git"
+  },
+  "scripts": {
+    "build:wasm": "./scripts/build-wasm.sh",
+    "docker:run": "./scripts/docker-run.sh",
+    "docker:build": "npm run docker:run ./scripts/build-wasm.sh"
   },
   "dependencies": {
     "@swc/core": "1.3.100",
