--- a/packages/plugin-webpack-builder/package.json
+++ b/packages/plugin-webpack-builder/package.json
@@ -8,10 +8,12 @@
     "@svgr/webpack": "^8.1.0",
     "@tinkoff/browserslist-config": "0.0.0-stub",
     "@tinkoff/dippy": "0.0.0-stub",
+    "@tinkoff/is-modern-lib": "0.0.0-stub",
     "@tinkoff/utils": "^2.1.3",
     "@tinkoff/webpack-dedupe-plugin": "0.0.0-stub",
     "ansi-escapes": "^4.3.2",
     "ansis": "^3.17.0",
+    "autoprefixer": "^10.4.8",
     "browserslist": "^4.21.3",
     "chalk": "^4.1.2",
     "core-js-compat": "3.43.0",
@@ -31,6 +33,7 @@
     "spark-md5": "^3.0.2",
     "svgo": "^3.0.2",
     "thread-loader": "^3.0.4",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
     "webpack": "5.101.1",
     "webpack-dev-middleware": "^7.4.2",
     "webpack-hot-middleware": "^2.26.1",
