--- a/packages/plugin-webpack-builder/tsconfig.json
+++ b/packages/plugin-webpack-builder/tsconfig.json
@@ -25,6 +25,9 @@
         },
         {
             "path": "../libs/webpack-dedupe-plugin"
+        },
+        {
+            "path": "../libs/is-modern-lib"
         }
     ]
 }
