--- a/packages/plugin-webpack-builder/package.json
+++ b/packages/plugin-webpack-builder/package.json
@@ -4,6 +4,7 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "dependencies": {
+    "@module-federation/node": "^0.15.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@svgr/webpack": "^8.1.0",
     "@tinkoff/browserslist-config": "0.0.0-stub",
