--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
     "examples/**"
   ],
   "devDependencies": {
+    "@tramvai/build": "workspace:tools/build",
     "@types/jest": "^29.0.2",
     "@types/node": "20.14.13",
     "@types/webpack-env": "^1.13.16",
     "expect-type": "^0.13.0",
-    "typescript": "~5.1.0",
     "json": "^9.0.6",
+    "typescript": "~5.1.0",
     "wsrun": "^5.2.0"
   },
-  "dependencies": {},
   "resolutions": {
     "webpack": "^5",
     "@types/webpack": "^5",
