--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "postinstall": "tsc -b tools/monorepo/fix-ts-references tools/monorepo/depscheck tools/build packages/libs/webpack-dedupe-plugin && wsrun -p '@{tinkoff,tramvai}/*' -m copy-external-files",
-    "references": "fix-ts-references --fix",
+    "references": "npx fix-ts-references --fix",
     "prewatch": "npm run cli:generate-schema",
     "watch": "yarn references && tsc -b ./tsconfig.solution.json --watch",
     "prebuild": "npm run cli:generate-schema",
