--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "prewatch": "npm run cli:generate-schema",
     "watch": "yarn references && tsc -b ./tsconfig.solution.json --watch",
     "prebuild": "npm run cli:generate-schema",
+    "json:cli": "json",
     "build": "yarn references && tsc -b ./tsconfig.solution.json",
     "build:publish": "wsrun -p '@{tinkoff,tramvai}/*' -e -m --serial build",
-    "build:change-typings": "wsrun -p '@{tinkoff,tramvai}/*' -c json -I -f package.json -e \"this.typings=this.typings && this.typings.replace(/^src\\/(.*)\\.ts/, 'lib/\\$1.d.ts')\"",
+    "build:change-typings": "wsrun -p '@{tinkoff,tramvai}/*' -c json:cli -I -f package.json -e \"this.typings=this.typings && this.typings.replace(/^src\\/(.*)\\.ts/, 'lib/\\$1.d.ts')\"",
     "build:change-versions": "node tools/public-packages/update-public-packages-versions.js",
     "cli:generate-schema": "yarn workspace @tramvai/cli generate-schema",
     "publish:all": "node tools/public-packages/publish-public-packages.js"
