--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,13 +4,13 @@
   "main": "./lib/tokens.js",
   "types": "./lib/tokens.d.ts",
   "dependencies": {
+    "@swc/core": "1.3.100",
     "@tinkoff/dippy": "0.0.0-stub",
     "@tinkoff/package-manager-wrapper": "0.0.0-stub",
     "@tinkoff/utils": "^2.1.3",
     "chalk": "^4.1.2",
     "chrome-trace-event": "^1.0.4",
     "cosmiconfig": "^9.0.0",
-    "cosmiconfig-typescript-loader": "^6.1.0",
     "detect-port": "^1.5.1",
     "find-cache-dir": "^3.3.2",
     "fs-extra": "^9.1.0",
