--- a/.github/workflows/test-smoke.yml
+++ b/.github/workflows/test-smoke.yml
@@ -52,7 +52,7 @@ jobs:
         run: tramvai-debug new smoke-bootstrap --type=app --template=multirepo --packageManager=npm --testingFramework=jest
 
       - name: Update tramvai version
-        working-directory: ../
+        working-directory: ../smoke-bootstrap
         run: tramvai-debug update prerelease
 
       - name: Install Playwright
