--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,7 +16,8 @@
     "fs-extra": "^9.1.0",
     "proper-lockfile": "^4.1.2",
     "resolve": "^1.22.4",
-    "semver": "^7.3.7"
+    "semver": "^7.3.7",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@tinkoff/webpack-dedupe-plugin": "0.0.0-stub",
