--- a/packages/plugin-webpack-pwa/package.json
+++ b/packages/plugin-webpack-pwa/package.json
@@ -4,6 +4,14 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "typings": "./lib/index.d.ts",
+  "files": [
+    "src",
+    "lib"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w"
+  },
   "dependencies": {
     "workbox-webpack-plugin": "^6.6.1"
   },
