--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,6 +3,14 @@
   "version": "0.0.0-stub",
   "main": "./lib/tokens.js",
   "types": "./lib/tokens.d.ts",
+  "files": [
+    "src",
+    "lib"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w"
+  },
   "dependencies": {
     "@swc/core": "1.3.100",
     "@tinkoff/dippy": "0.0.0-stub",
