--- a/packages/plugin-swc-transpiler/package.json
+++ b/packages/plugin-swc-transpiler/package.json
@@ -4,6 +4,14 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "typings": "./lib/index.d.ts",
+  "files": [
+    "src",
+    "lib"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w"
+  },
   "dependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
     "@tinkoff/utils": "^2.1.3",
