--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -58,7 +58,7 @@
     "@loadable/webpack-plugin": "^5.15.0",
     "@module-federation/node": "^0.15.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "@rsdoctor/webpack-plugin": "^0.4.13",
+    "@rsdoctor/webpack-plugin": "^1.3.6",
     "@sentry/node": "^6.2.5",
     "@svgr/webpack": "^8.1.0",
     "@tinkoff/babel-plugin-lodash": "^0.1.0",
@@ -125,7 +125,6 @@
     "less-loader": "^8.1.1",
     "lightning-pool": "^2.4.0",
     "loader-utils": "^3.2.1",
-    "mdtable": "^0.3.1",
     "mini-css-extract-plugin": "2.7.6",
     "node-plop": "^0.26.0",
     "noop-stream": "^0.1.0",
@@ -141,7 +140,6 @@
     "postcss-loader": "^7.0.1",
     "postcss-modules-tilda": "^2.0.0",
     "postcss-modules-values-replace": "^4.0.0",
-    "pretty-bytes": "^5.6.0",
     "prettyoutput": "^1.2.0",
     "process": "^0.11.10",
     "promise-queue": "^2.2.5",
@@ -156,6 +154,7 @@
     "stoppable": "^1.1.0",
     "svgo": "^3.0.2",
     "svgo-loader": "^4.0.0",
+    "table": "^6.9.0",
     "terser-webpack-plugin": "^5.3.9",
     "text-table": "^0.2.0",
     "thread-loader": "^3.0.4",
