--- a/examples/cli-rewrited/package.json
+++ b/examples/cli-rewrited/package.json
@@ -13,6 +13,7 @@
     "test:integration:watch": "jest --runInBand --watch --config ./jest.integration.config.js"
   },
   "devDependencies": {
+    "@jest/types": "^29.6.3",
     "@tramvai/api": "0.0.0-stub",
     "@tramvai/cli": "0.0.0-stub",
     "@tramvai/plugin-babel-transpiler": "0.0.0-stub",
@@ -20,10 +21,8 @@
     "@tramvai/plugin-webpack-pwa": "0.0.0-stub",
     "@tramvai/test-integration": "0.0.0-stub",
     "@tramvai/test-integration-jest": "0.0.0-stub",
-    "@types/jest": "^29.5.0",
     "@types/react": "^19.0.6",
-    "jest": "^29.5.0",
-    "jest-circus": "^29.5.0",
+    "jest": "^29.7.0",
     "postcss-custom-media": "^8.0.0",
     "postcss-custom-properties": "^11.0.0",
     "postcss-modules-values-replace": "^4.0.0",
