--- a/examples/fs-routing/package.json
+++ b/examples/fs-routing/package.json
@@ -13,14 +13,13 @@
     "test:integration:watch": "jest --runInBand --watch --config ./jest.integration.config.js"
   },
   "devDependencies": {
+    "@jest/types": "^29.6.3",
     "@tramvai/cli": "0.0.0-stub",
     "@tramvai/test-integration": "0.0.0-stub",
     "@tramvai/test-integration-jest": "0.0.0-stub",
-    "@types/jest": "^29.5.0",
     "@types/react": "^19.0.6",
     "babel-plugin-react-compiler": "^19.0.0-beta-decd7b8-20250118",
-    "jest": "^29.5.0",
-    "jest-circus": "^29.5.0",
+    "jest": "^29.7.0",
     "postcss-custom-media": "^8.0.0",
     "postcss-custom-properties": "^11.0.0",
     "postcss-modules-values-replace": "^4.0.0",
