--- a/examples/pwa/package.json
+++ b/examples/pwa/package.json
@@ -15,12 +15,11 @@
     "test:integration:watch": "jest --runInBand --watch --config ./jest.integration.config.js"
   },
   "devDependencies": {
+    "@jest/types": "^29.6.3",
     "@tramvai/cli": "0.0.0-stub",
     "@tramvai/test-integration": "0.0.0-stub",
     "@tramvai/test-integration-jest": "0.0.0-stub",
-    "@types/jest": "^28.1.6",
-    "jest": "^29.0.2",
-    "jest-circus": "^29.0.2",
+    "jest": "^29.7.0",
     "postcss-custom-media": "^8.0.0",
     "postcss-custom-properties": "^11.0.0",
     "postcss-modules-values-replace": "^4.0.0",
