--- a/packages/modules/http-client/package.json
+++ b/packages/modules/http-client/package.json
@@ -28,17 +28,20 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "@jest/globals": "^29.7.0",
     "@tramvai/http-client": "0.0.0-stub",
     "@tramvai/tinkoff-request-http-client-adapter": "0.0.0-stub",
     "@tramvai/tokens-common": "0.0.0-stub",
     "@tramvai/tokens-http-client": "0.0.0-stub",
     "@tramvai/tokens-server": "0.0.0-stub",
     "@tramvai/tokens-server-private": "0.0.0-stub",
+    "jest": "^29.7.0",
     "undici": "^7.16.0"
   },
   "devDependencies": {
     "@tinkoff/request-core": "^0.10.0",
-    "@tinkoff/request-plugin-protocol-http": "0.15.0"
+    "@tinkoff/request-plugin-protocol-http": "0.15.0",
+    "@tramvai/build": "0.0.0-stub"
   },
   "peerDependencies": {
     "@tinkoff/dippy": "0.0.0-stub",
