--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -8,7 +8,7 @@
     "types": [
       "node",
       "jest",
-      "@types/jest",
+      "@jest/types",
       "@types/tramvai-monorepo"
     ]
   },
