--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ tinkoff-examples/granular/src/bundles
 tinkoff-examples/granular/src/pages
 tinkoff-examples/granular/src/deps
 **/*.cpuprofile
+.rsdoctor
 
 # package-lock
 examples/*/package-lock.json
