--- a/packages/modules/router/tsconfig.json
+++ b/packages/modules/router/tsconfig.json
@@ -69,6 +69,9 @@
         },
         {
             "path": "../../tokens/render"
+        },
+        {
+            "path": "../../libs/hooks"
         }
     ]
 }
