--- a/examples/prerender/package.json
+++ b/examples/prerender/package.json
@@ -1,28 +1,16 @@
 {
-  "name": "cli-rewrited",
+  "name": "prerender",
   "version": "0.0.0-stub",
   "private": true,
   "scripts": {
-    "start": "node start.js",
-    "start:prod": "tramvai start-prod cli-rewrited",
-    "build": "tramvai build cli-rewrited",
-    "lint": "eslint --ext .ts,.tsx --ignore-path .gitignore .",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:integration": "jest -w=3 --config ./jest.integration.config.js",
-    "test:integration:watch": "jest --runInBand --watch --config ./jest.integration.config.js"
+    "start": "tramvai start prerender",
+    "start:prod": "tramvai start-prod prerender",
+    "build": "tramvai build prerender"
   },
   "devDependencies": {
-    "@jest/types": "^29.6.3",
-    "@tramvai/api": "0.0.0-stub",
     "@tramvai/cli": "0.0.0-stub",
-    "@tramvai/plugin-babel-transpiler": "0.0.0-stub",
-    "@tramvai/plugin-webpack-builder": "0.0.0-stub",
-    "@tramvai/plugin-webpack-pwa": "0.0.0-stub",
     "@tramvai/test-integration": "0.0.0-stub",
     "@tramvai/test-integration-jest": "0.0.0-stub",
-    "@types/react": "^19.0.6",
-    "jest": "^29.7.0",
     "postcss-custom-media": "^8.0.0",
     "postcss-custom-properties": "^11.0.0",
     "postcss-modules-values-replace": "^4.0.0",
@@ -30,9 +18,10 @@
   },
   "dependencies": {
     "@tramvai/core": "0.0.0-stub",
+    "@tramvai/module-cache-warmup": "0.0.0-stub",
     "@tramvai/module-common": "0.0.0-stub",
     "@tramvai/module-error-interceptor": "0.0.0-stub",
-    "@tramvai/module-progressive-web-app": "0.0.0-stub",
+    "@tramvai/module-http-client": "0.0.0-stub",
     "@tramvai/module-render": "0.0.0-stub",
     "@tramvai/module-router": "0.0.0-stub",
     "@tramvai/module-seo": "0.0.0-stub",
@@ -42,8 +31,8 @@
     "@tramvai/tokens-common": "0.0.0-stub",
     "@tramvai/tokens-render": "0.0.0-stub",
     "@tramvai/tokens-router": "0.0.0-stub",
-    "os-browserify": "^0.3.0",
     "react": "19.0.1",
+    "react-compiler-runtime": "^19.0.0-beta-decd7b8-20250118",
     "react-dom": "19.0.1",
     "tslib": "^2.4.0"
   }
