--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tramvai/build": "workspace:tools/build",
     "@jest/types": "^29.6.3",
     "@types/node": "20.14.13",
+    "@types/jest": "^29.5.14",
     "@types/webpack-env": "^1.13.16",
     "expect-type": "^0.13.0",
     "json": "^9.0.6",
