--- a/packages/plugin-webpack-builder/package.json
+++ b/packages/plugin-webpack-builder/package.json
@@ -34,6 +34,8 @@
     "http-proxy": "^1.18.1",
     "image-minimizer-webpack-plugin": "^4.1.3",
     "image-size": "^1.0.2",
+    "lightningcss": "^1.30.2",
+    "lightningcss-loader": "^3.0.0",
     "loader-utils": "^3.2.1",
     "mini-css-extract-plugin": "2.7.6",
     "postcss-modules-values-replace": "^4.0.0",
