--- a/packages/swc/plugins/provider_stack/Cargo.toml
+++ b/packages/swc/plugins/provider_stack/Cargo.toml
@@ -11,3 +11,4 @@ swc_core = { workspace = true }
 swc_common = { workspace = true }
 swc_ecma_parser = { workspace = true }
 if_chain = { workspace = true }
+swc_ecma_visit = { workspace = true }
