--- a/packages/swc/plugins/lazy_component/Cargo.toml
+++ b/packages/swc/plugins/lazy_component/Cargo.toml
@@ -15,3 +15,4 @@ once_cell = "1.13.1"
 regex = "1.6.0"
 serde_json = "1.0.79"
 tracing = { version = "0.1.37", features = ["release_max_level_off"] }
+swc_ecma_visit = { workspace = true }
