--- a/packages/swc/plugins/react_element_info_unique/Cargo.toml
+++ b/packages/swc/plugins/react_element_info_unique/Cargo.toml
@@ -10,3 +10,5 @@ crate-type = ["cdylib"]
 swc_core = { workspace = true }
 swc_ecma_parser = { workspace = true }
 swc_common = { workspace = true }
+swc_ecma_visit = { workspace = true }
+
