--- a/packages/modules/dns-cache/package.json
+++ b/packages/modules/dns-cache/package.json
@@ -27,7 +27,8 @@
     "@tramvai/core": "0.0.0-stub",
     "@tramvai/tokens-common": "0.0.0-stub",
     "@tramvai/tokens-http-client": "0.0.0-stub",
-    "cacheable-lookup": "^7.0.0"
+    "cacheable-lookup": "^7.0.0",
+    "undici": "^7.16.0"
   },
   "peerDependencies": {
     "tslib": "^2.4.0"
