--- a/packages/modules/http-proxy-agent/tsconfig.json
+++ b/packages/modules/http-proxy-agent/tsconfig.json
@@ -21,6 +21,9 @@
         },
         {
             "path": "../../tokens/metrics"
+        },
+        {
+            "path": "../../tokens/http-client"
         }
     ]
 }
