--- a/.github/workflows/test-smoke.yml
+++ b/.github/workflows/test-smoke.yml
@@ -42,7 +42,7 @@ jobs:
         run: yarn build
 
       - name: Setup tramvai
-        run: npm i -g @tramvai/cli@prerelease
+        run: npm i -g @tramvai/cli@latest
 
       - name: Setup tramvai debug
         run: tramvai-debug debugPath="$PWD/packages/cli"
@@ -53,7 +53,7 @@ jobs:
 
       - name: Update tramvai version
         working-directory: ../smoke-bootstrap
-        run: tramvai-debug update prerelease
+        run: tramvai-debug update latest
 
       - name: Install Playwright
         working-directory: ../smoke-bootstrap
