--- a/packages/modules/child-app/tsconfig.json
+++ b/packages/modules/child-app/tsconfig.json
@@ -60,6 +60,9 @@
         },
         {
             "path": "../../libs/errors"
+        },
+        {
+            "path": "../router"
         }
     ]
 }
