--- a/packages/modules/child-app/package.json
+++ b/packages/modules/child-app/package.json
@@ -37,6 +37,7 @@
     "@tinkoff/url": "0.0.0-stub",
     "@tramvai/child-app-core": "0.0.0-stub",
     "@tramvai/module-common": "0.0.0-stub",
+    "@tramvai/module-router": "0.0.0-stub",
     "@tramvai/safe-strings": "0.0.0-stub",
     "@tramvai/tokens-child-app": "0.0.0-stub"
   },
