--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -60,6 +60,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@rsdoctor/webpack-plugin": "^1.3.6",
     "@sentry/node": "^6.2.5",
+    "@statoscope/webpack-plugin": "^5.29.0",
     "@svgr/webpack": "^8.1.0",
     "@tinkoff/babel-plugin-lodash": "^0.1.0",
     "@tinkoff/browserslist-config": "0.0.0-stub",
